--- a/rootdir/init.bcm281x5.usb.rc
+++ b/rootdir/init.bcm281x5.usb.rc
@@ -82,6 +82,16 @@ on property:sys.usb.config=ptp,adb
     start adbd
     setprop sys.usb.state ${sys.usb.config}
 
+on post-fs
+    mkdir /dev/usb-ffs 0775 shell shell
+    mkdir /dev/usb-ffs/adb 0770 shell shell
+    mount functionfs adb /dev/usb-ffs/adb uid=2000,gid=2000
+    mkdir /dev/usb-ffs/mtp 0770 mtp mtp
+    mount functionfs mtp /dev/usb-ffs/mtp rmode=0770,fmode=0660,uid=1024,gid=1024
+    write /sys/class/android_usb/android0/f_ffs/aliases adb,mtp
+    setprop sys.usb.ffs.max_write 294912
+    setprop sys.usb.ffs.max_read 294912
+
 on property:sys.usb.config=mtp
     write /sys/class/android_usb/android0/enable 0
     write /sys/class/android_usb/android0/idVendor 04e8
