--- a/rootdir/init.recovery.capri.rc
+++ b/rootdir/init.recovery.capri.rc
@@ -7,3 +7,5 @@ on init
     write /sys/class/android_usb/android0/bDeviceSubClass 0
     write /sys/class/android_usb/android0/bDeviceProtocol 0
     write /sys/class/android_usb/android0/enable 1
+
+    setprop sys.usb.ffs.aio_compat 1
